support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_long_short.i
%module xxx

int foo(long short x);
int bar(short long y);
int spam(long long long x);
int grok(short short int x);
